<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">

    <item
      android:id="@+id/menuUser"
      android:checkable="false"
      android:icon="@drawable/ic_menu_user"
      android:title="@string/menu_user"/>

    <item
      android:id="@+id/menuAgreement"
      android:checkable="false"
      android:icon="@drawable/ic_menu_info"
      android:title="@string/menu_agreement"/>

    <item
      android:id="@+id/menuPrivacy"
      android:checkable="false"
      android:icon="@drawable/ic_menu_update"
      android:title="@string/menu_privacy"/>

    <item
      android:id="@+id/menuSettings"
      android:checkable="false"
      android:icon="@drawable/ic_menu_setting"
      android:title="@string/menu_settings"/>

  </group>

</menu>