<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/callOptions"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  android:padding="@dimen/spacing_2x">

  <RadioButton
    android:id="@+id/option1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:checked="true"
    android:tag="NORMAL"
    android:text="@string/label_contact_message_option1" />

  <RadioButton
    android:id="@+id/option2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="EMERGENCY"
    android:text="@string/label_contact_message_option2" />

  <RadioButton
    android:id="@+id/option0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="EMPTY"
    android:text="@string/label_contact_message_option0"
    android:textColor="@color/grey" />

</RadioGroup>


