<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/white">

  <LinearLayout
    android:id="@+id/permissionsLayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_4x"
        android:paddingEnd="@dimen/spacing_4x">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:src="@drawable/logo_report"/>

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="@dimen/spacing_5x"
          android:gravity="center"
          android:text="@string/message_permission_required"
          android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/spacing_5x"
          android:orientation="horizontal">

          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_launcher"/>

          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2x"
            android:orientation="vertical">

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/label_permission_phone"
              android:textAppearance="@style/TextAppearance.AppCompat.Title"
              android:textStyle="bold"/>

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/message_permission_phone"
              android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
          </LinearLayout>
        </LinearLayout>

        <Button
          android:id="@+id/checkPermission"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="@dimen/spacing_5x"
          android:layout_marginBottom="@dimen/spacing_2x"
          android:layout_marginStart="@dimen/spacing_1x"
          android:layout_marginEnd="@dimen/spacing_1x"
          android:background="@drawable/button_bg_accent"
          android:gravity="center"
          android:text="@string/label_permission_grant"
          android:textColor="@android:color/white"/>

      </LinearLayout>
    </ScrollView>

  </LinearLayout>
</RelativeLayout>
