<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:paddingBottom="@dimen/spacing_3x">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/spacing_2x"
        android:background="@drawable/bg_box_edge_grey2"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/bg_box_edge_grey2"
          android:orientation="horizontal"
          android:padding="@dimen/spacing_2x">

          <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/label_common_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey" />

          <TextView
            android:id="@+id/emailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2x"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="-1dp"
          android:background="@drawable/bg_box_edge_grey2"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="@dimen/spacing_2x">

          <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/label_common_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey" />

          <TextView
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2x"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="-1dp"
          android:background="@drawable/bg_box_edge_grey2"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="@dimen/spacing_2x">

          <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/label_common_hp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey" />

          <TextView
            android:id="@+id/hpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2x"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="-1dp"
          android:background="@drawable/bg_box_edge_grey2"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="@dimen/spacing_2x">

          <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/label_common_partner"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey" />

          <TextView
            android:id="@+id/partnerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2x"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="-1dp"
          android:background="@drawable/bg_box_edge_grey2"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="@dimen/spacing_2x">

          <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/label_common_signedup"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey" />

          <TextView
            android:id="@+id/signupDateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2x"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/textColorPrimary" />

        </LinearLayout>

      </LinearLayout>

    </androidx.core.widget.NestedScrollView>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
