<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        android:gravity="center"
        app:layout_scrollFlags="scroll|enterAlways">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:src="@drawable/logo_report_top" />

      </androidx.appcompat.widget.Toolbar>

      <io.dymatics.cognyreport.ui.view.VehicleInfoView_
        android:id="@+id/vehicleInfoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:fillViewport="true"
      android:paddingBottom="@dimen/spacing_10x"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/spacing_2x"
          android:layout_marginTop="@dimen/spacing_2x">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dtc_history"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold" />

          <LinearLayout
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/spacing_1x"
            android:background="@drawable/button_bg_accent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_1x"
            android:paddingTop="@dimen/spacing_quarter"
            android:paddingEnd="@dimen/spacing_1x"
            android:paddingBottom="@dimen/spacing_quarter">

            <ImageView
              android:layout_width="18dp"
              android:layout_height="18dp"
              android:layout_marginEnd="@dimen/spacing_half"
              android:src="@drawable/ic_refresh_black_24dp"
              android:tint="@android:color/white" />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/label_common_update"
              android:textColor="@android:color/white" />

          </LinearLayout>
        </RelativeLayout>


        <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginTop="@dimen/spacing_2x"
          android:layout_marginBottom="@dimen/spacing_2x"
          android:background="@color/divider" />

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recyclerView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/spacing_1x"
          android:layout_marginBottom="@dimen/spacing_1x"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
          android:id="@+id/emptyLayer"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:orientation="vertical"
          android:visibility="gone">

          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_warning_g"
            android:tint="@color/grey" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_1x"
            android:gravity="center"
            android:text="@string/label_dtc_history_none"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/grey" />
        </LinearLayout>
      </LinearLayout>

    </androidx.core.widget.NestedScrollView>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
